#45 Improved batch scripts for starting with Java 11 and JavaFX 11 SDK